<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="20dp"
        tools:context="com.example.sapi.advertiser.Activities.RegisterActivity">

        <EditText
            android:id="@+id/emailField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="23dp"
            android:ems="10"
            android:hint="@string/emailHint"
            android:inputType="textEmailAddress" />

        <EditText
            android:id="@+id/passwordField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/emailField"
            android:layout_below="@+id/emailField"
            android:layout_marginTop="24dp"
            android:ems="10"
            android:hint="@string/passwordHint"
            android:inputType="textPassword" />

        <Button
            android:id="@+id/registerButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/passwordField"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="40dp"
            android:text="@string/signUp" />

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:visibility="invisible" />
    </RelativeLayout>
</ScrollView>