<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"

        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="20dp"
        tools:context="com.example.sapi.advertiser.Activities.LoginActivity"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="0dp">

        <EditText
            android:id="@+id/login_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginTop="33dp"
            android:ems="10"
            android:hint="@string/emailHint"
            android:inputType="textEmailAddress" />

        <EditText
            android:id="@+id/login_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignEnd="@+id/login_email"
            android:layout_below="@+id/login_email"
            android:layout_marginTop="37dp"
            android:ems="10"
            android:hint="@string/passwordHint"
            android:inputType="textPassword" />

        <Button
            android:id="@+id/login_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/login_password"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="35dp"
            android:text="@string/logIn" />

        <com.google.android.gms.common.SignInButton
            android:id="@+id/loginGoogleButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="37dp"
            android:paddingTop="30dp"
            android:layout_alignTop="@+id/login_button"
            android:layout_centerHorizontal="true">

        </com.google.android.gms.common.SignInButton>

        <com.facebook.login.widget.LoginButton
            android:id="@+id/loginFacebookButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_below="@+id/loginGoogleButton"
            android:layout_gravity="center_horizontal"
            android:layout_marginEnd="69dp"
            android:layout_marginTop="12dp" />

        <Button
            android:id="@+id/register_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/registerNow"
            android:layout_below="@+id/loginFacebookButton"
            android:layout_alignParentStart="true"
            android:layout_marginTop="11dp" />

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:visibility="invisible" />
    </RelativeLayout>
</ScrollView>