<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >
<LinearLayout
    android:id="@+id/images"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">
    <ImageButton
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/imageSelect"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:background="#00ffffff"
        android:src="@mipmap/add_btn"
        android:scaleType="centerCrop"
        android:adjustViewBounds="true"
        android:contentDescription="@string/addImage"/>
    <HorizontalScrollView
        android:id="@+id/horizontal_scroll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone">

        <LinearLayout
            android:id="@+id/linlayout_gallery"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingBottom="30dp"
            android:paddingTop="30dp"></LinearLayout>

    </HorizontalScrollView>
</LinearLayout>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/edit_title"
        android:background="@drawable/input_outline"
        android:layout_below="@+id/images"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="20dp"
        android:padding="15dp"

        android:ems="10"
        android:hint="@string/titleHint"
        android:inputType="textPersonName"
        android:maxLines="1"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:id="@+id/edit_description"
        android:background="@drawable/input_outline"
        android:layout_below="@+id/edit_title"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="20dp"
        android:padding="15dp"
        android:hint="@string/descriptionHint"

        android:inputType="textMultiLine"
        android:enabled="true"
        android:minLines="6"
        android:maxLines="6"
        android:isScrollContainer="true"
        android:focusable="true"/>

    <Button
        android:id="@+id/button_location"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/edit_description"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="27dp"
        android:text="@string/location" />

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        android:layout_centerHorizontal="true"/>

</RelativeLayout>

</ScrollView>